--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
-    "nodemailer": "^6.6.0"
+    "nodemailer": "^6.6.0",
+    "pug": "^3.0.2"
   },
   "type": "module"
 }
